--- a/lastProject.cfg
+++ b/lastProject.cfg
@@ -1,1 +1,1 @@
-C:/Users/Ryan/Desktop/game development/pygame/pygame_projects/src/GMS2RoomEditor/.gitattributes
+C:\Users\Ryan\Desktop\game development\game maker\bitJouster\bitJouster.yyp
