Add layer class, store rooms list in its own layer for independent scrolling and positioning

--- a/lastProject.cfg
+++ b/lastProject.cfg
@@ -1,1 +1,1 @@
-C:\Users\Ryan\Desktop\game development\game maker\bitJouster\bitJouster.yyp
+C:\Users\Ryan\Desktop\game development\game maker\roomEditorTest\roomEditorTest.yyp
